<resources>
    <string name="app_name">MinaaKitaa</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="log_in_button">Log In</string>
    <string name="atau_log_in_dengan">Atau Log In dengan</string>
    <string name="google_button">Google</string>
    <string name="facebook_button">Facebook</string>
    <string name="google">Google</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="registrasi">Registrasi</string>
    <string name="belum_punya_akun_registrasi">Belum punya akun? Registrasi</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="email">Email</string>
    <string name="lanjut">Lanjut</string>
    <string name="atur_password_baru_kamu">Atur Password Baru Kamu</string>
    <string name="password_harus_8_16_karakter_dan_mengandung_min_1_huruf_besar_dan_1_huruf_kecil">Password harus 8-16 karakter, dan mengandung min. 1 huruf besar dan 1 huruf kecil.</string>
    <string name="link_vertifikasi_sudah_dikirim_lewat_email_anda">Link vertifikasi sudah dikirim lewat email anda</string>
    <string name="ok">OK</string>
    <string name="mohon_maaf_email_tidak_terdaftar_silahkan_masukkan_email_anda_kembali">Mohon maaf email tidak terdaftar, silahkan masukkan email anda kembali.</string>
    <string name="masukkan_password_yang_benar">Masukkan Password yang Benar</string>
    <string name="password_sudah_ter_update">Password sudah ter-update.</string>
    <string name="pemilihan_akun">Pemilihan Akun</string>
    <string name="untuk_melanjutkan_ke_minakita">untuk melanjutkan ke MinaKita</string>
    <string name="nama_fb">Nama FB</string>
    <string name="tambahkan_akun_lain">Tambahkan akun lain</string>
    <string name="untuk_melanjutkan_facebook_akan_mengirimkan_nama_kamu_alamat_email_dan_foto_akun_yang_sama_dengan_minakita">Untuk melanjutkan, Facebook akan mengirimkan nama kamu, alamat email, dan foto akun yang sama dengan MinaKita.</string>
    <string name="login_menggunakan_facebook_berhasil">Login Menggunakan Facebook Berhasil!</string>
    <string name="log_in_menggunakan_email_berhasil">Log In Menggunakan Email Berhasil!</string>
    <string name="untuk_melanjutkan_google_akan_mengirimkan_nama_kamu_alamat_email_dan_foto_akun_yang_sama_dengan_minakita">Untuk melanjutkan, Google akan mengirimkan nama kamu, alamat email, dan foto akun yang sama dengan MinaKita.</string>
    <string name="nama_email_nama_user">Nama Email Nama User</string>
</resources>