<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/minakita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/weather"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="414dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="584dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/log_in"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="270dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="234dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="379dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/username"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/redeye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/redeye"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="289dp"
        android:layout_marginBottom="327dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="300dp"
        android:layout_marginRight="36dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:hint="@string/password"
        android:textSize="12sp"
        android:layout_marginTop="294dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="321dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lupaPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins"
        android:text="@string/lupa_password"
        android:textColor="#000000"
        android:textSize="12sp"
        android:layout_marginTop="329dp"
        android:layout_marginBottom="293dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="247dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="247dp" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipLogin"
        android:layout_width="328dp"
        android:layout_height="55.15dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal"
        android:text="@string/log_in_button"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:chipBackgroundColor="#2547E0"
        app:chipCornerRadius="25dp"
        android:layout_marginTop="372dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="227.85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/line16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line6"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="269.77dp"
        android:layout_marginTop="448.42dp"
        android:layout_marginBottom="191.38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="269.77dp" />

    <ImageView
        android:id="@+id/line17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line7"
        android:layout_marginTop="448.42dp"
        android:layout_marginStart="253.72dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="191.37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="253.72dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/atauLoginDengan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/atau_log_in_dengan"
        android:textSize="13sp"
        android:layout_marginTop="438dp"
        android:layout_marginStart="108.28dp"
        android:layout_marginEnd="124.33dp"
        android:layout_marginBottom="182dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="108.28dp"
        android:layout_marginRight="124.33dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="588dp"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/belumpunyaakun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/belum_punya_akun_registrasi"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_marginTop="605dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/googleButton"
        android:layout_width="154dp"
        android:layout_height="54dp"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="493dp"
        android:layout_marginEnd="190dp"
        android:layout_marginRight="190dp"
        android:drawableLeft="@drawable/google"
        android:fontFamily="@font/poppins"
        android:text="@string/google"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_goneMarginBottom="105dp" />

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="154dp"
        android:layout_height="54dp"
        android:layout_gravity="start"
        android:layout_x="190dp"
        android:layout_y="493dp"
        android:drawableLeft="@drawable/facebook"
        android:fontFamily="@font/poppins"
        android:text="@string/facebook_button"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />

</androidx.constraintlayout.widget.ConstraintLayout>