<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/minakita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/weather"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="414dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="584dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/log_in"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="270dp" />

    <ImageView
        android:id="@+id/rectangle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle3"
        android:layout_marginTop="224dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="181dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pemilihanakun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/pemilihan_akun"
        android:textColor="#000000"
        android:textSize="12sp"
        android:layout_marginTop="237dp"
        android:layout_marginStart="131.52dp"
        android:layout_marginEnd="128.43dp"
        android:layout_marginBottom="385dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="131.52dp"
        android:layout_marginRight="128.43dp" />

    <TextView
        android:id="@+id/untukmelanjutkan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/untuk_melanjutkan_ke_minakita"
        android:textColor="#000000"
        android:textSize="12sp"
        android:layout_marginTop="257dp"
        android:layout_marginBottom="365dp"
        android:layout_marginStart="84.08dp"
        android:layout_marginEnd="85.11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="84.08dp"
        android:layout_marginRight="85.11dp" />

    <TextView
        android:id="@+id/namaFB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/nama_fb"
        android:layout_marginTop="306dp"
        android:layout_marginBottom="316dp"
        android:layout_marginStart="74.79dp"
        android:layout_marginEnd="229.51dp"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="74.79dp"
        android:layout_marginRight="229.51dp" />

    <Button
        android:id="@+id/googleButton"
        android:layout_width="154dp"
        android:layout_height="54dp"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="493dp"
        android:layout_marginEnd="190dp"
        android:layout_marginRight="190dp"
        android:drawableLeft="@drawable/google"
        android:fontFamily="@font/poppins"
        android:text="@string/google"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_goneMarginBottom="105dp" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/line1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line5"
        android:layout_marginTop="341.55dp"
        android:layout_marginBottom="297dp"
        android:layout_marginStart="34.57dp"
        android:layout_marginEnd="37.66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="34.57dp"
        android:layout_marginRight="37.66dp" />

    <TextView
        android:id="@+id/tambahkanakunlain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74.79dp"
        android:layout_marginLeft="74.79dp"
        android:layout_marginTop="353dp"
        android:layout_marginEnd="172.78dp"
        android:layout_marginRight="172.78dp"
        android:layout_marginBottom="272dp"
        android:fontFamily="@font/poppins"
        android:text="@string/tambahkan_akun_lain"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <ImageView
        android:id="@+id/line1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line5"
        android:layout_marginTop="378dp"
        android:layout_marginStart="35.6dp"
        android:layout_marginEnd="36.63dp"
        android:layout_marginBottom="260.55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="35.6dp"
        android:layout_marginRight="36.63dp" />

    <TextView
        android:id="@+id/untukmelanjutkan_2"
        android:layout_width="289.84dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textColor="#000000"
        android:textSize="12sp"
        android:layout_marginTop="401dp"
        android:layout_marginStart="35.6dp"
        android:layout_marginEnd="34.57dp"
        android:layout_marginBottom="194dp"
        android:text="@string/untuk_melanjutkan_facebook_akan_mengirimkan_nama_kamu_alamat_email_dan_foto_akun_yang_sama_dengan_minakita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="35.6dp"
        android:layout_marginRight="34.57dp" />

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="154dp"
        android:layout_height="54dp"
        android:layout_gravity="start"
        android:layout_x="190dp"
        android:layout_y="493dp"
        android:drawableLeft="@drawable/facebook"
        android:fontFamily="@font/poppins"
        android:text="@string/facebook_button"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="588dp"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/belumpunyaakun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/belum_punya_akun_registrasi"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_marginTop="605dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>