<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/security"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="56dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="384dp"
        android:layout_marginLeft="62dp"
        android:layout_marginRight="98dp" />

    <TextView
        android:id="@+id/gantipassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ganti_password"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="584dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="145dp" />

    <TextView
        android:id="@+id/aturpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atur_password_baru_kamu"
        android:layout_marginTop="268dp"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="348dp"
        android:fontFamily="@font/poppins"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:hint="@string/password"
        android:textSize="12sp"
        android:layout_marginTop="329dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="290dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/syaratpassword"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:fontFamily="@font/poppins"
        android:textColor="#000000"
        android:layout_marginTop="358dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="246dp"
        android:text="@string/password_harus_8_16_karakter_dan_mengandung_min_1_huruf_besar_dan_1_huruf_kecil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipLanjut"
        android:layout_width="328dp"
        android:layout_height="55.15dp"
        app:chipBackgroundColor="#2547E0"
        app:chipCornerRadius="25dp"
        android:layout_marginTop="419dp"
        android:layout_marginBottom="181dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/lanjut"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:clickable="true"
        android:focusable="true" />

    <ImageButton
        android:id="@+id/redeye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/redeye"
        android:layout_marginStart="301dp"
        android:layout_marginEnd="37dp"
        android:layout_marginTop="327dp"
        android:layout_marginBottom="297dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="301dp"
        android:layout_marginRight="37dp" />


</androidx.constraintlayout.widget.ConstraintLayout>