<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/security"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="384dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="98dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="62dp"
        android:layout_marginRight="98dp" />

    <TextView
        android:id="@+id/gantipassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ganti_password"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="584dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="145dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:fontFamily="@font/poppins"
        android:hint="@string/email"
        android:layout_marginTop="287dp"
        android:layout_marginBottom="326dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chipLanjut"
        android:layout_width="328dp"
        android:layout_height="55.15dp"
        app:chipBackgroundColor="#2547E0"
        app:chipCornerRadius="25dp"
        android:layout_marginTop="339dp"
        android:layout_marginBottom="261dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/lanjut"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:clickable="true"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>